# uv-ml-collab-starter

./: .dockerignore  .gitignore  README.md  main.py  pyproject.toml
docs/00_overview/: student-README.md
scripts/: download_data.py
